<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/birthdate"
    android:background="@color/activityBackground"
    android:paddingLeft="20.0dip"
    android:paddingTop="14.0dip"
    android:paddingRight="20.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingStart="20.0dip"
    android:paddingEnd="20.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0.0px"
        android:layout_height="0.0px" />
    <com.roblox.client.components.RbxTextView
        android:textSize="@dimen/textSizeSignupHeader"
        android:textStyle="bold"
        android:textColor="@color/RbxBlack"
        android:layout_gravity="center_horizontal"
        android:id="@id/fragment_sign_up_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.roblox.client.components.RbxButton
        android:textSize="@dimen/textSizeLoginFinePrint"
        android:textColor="@color/RbxBlue2"
        android:layout_gravity="center_horizontal"
        android:id="@id/fragment_sign_up_phone_email_button"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" />
    <com.roblox.client.components.PhoneNumberEditText
        android:id="@id/fragment_sign_up_phone_number_full_field"
        android:layout_width="fill_parent"
        android:layout_height="80.0dip"
        android:layout_marginTop="30.0dip"
        app:hintText="@string/Authentication_SignUp_Label_PhoneNumber"
        style="@style/Theme.Roblox.EditText" />
    <com.roblox.client.components.RbxEditText
        android:id="@id/fragment_sign_up_phone_password"
        android:layout_width="fill_parent"
        android:layout_height="80.0dip"
        android:layout_marginTop="15.0dip"
        android:contentDescription="@string/Authentication_SignUp_Description_SignUpPasswordContentDesc"
        app:hintText="@string/CommonUI_Messages_Label_Password"
        app:hintTextLong="@string/Authentication_SignUp_Description_PasswordHintTextLong"
        app:inputType="password"
        style="@style/Theme.Roblox.EditText" />
    <com.roblox.client.components.RbxProgressButton
        android:layout_gravity="bottom"
        android:id="@id/fragment_sign_up_phone_sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="15.0dip"
        app:buttonTextSize="@dimen/textSizeBtnSubmit"
        app:defButtonText="@string/Authentication_SignUp_Label_SignUp"
        app:progressTextSize="@dimen/textSizeBtnSubmitProgress"
        style="@style/Theme.Roblox.Progress.Button.Blue" />
    <com.roblox.client.components.RbxTextView
        android:textSize="@dimen/textSizeSignupFinePrint"
        android:textColor="@color/nearby_context_menu_text_color"
        android:gravity="start"
        android:id="@id/fragment_sign_up_phone_fine_print_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        style="@style/Theme.Roblox.StandardFontLight" />
</LinearLayout>